# hakihive

./: CMakeLists.txt  README.md  SECURITY.md  pom.xml  tsconfig.json
.github/workflows/: release.yml
assets/icons/: app.icns
openapi/: conversation_openapi.json
src/main/cpp/: main.cpp
src/main/cpp/deployers/: application_config_deployer.cpp  start_shell_deployer.cpp  start_shell_deployer.h
src/main/cpp/dto/: install_java_runtime_result.h
src/main/cpp/installers/: hakihive_jar_downloader.cpp  java_runtime_base_installer.cpp  java_runtime_installer.cpp  java_runtime_installer.h
src/main/cpp/utils/: input_util.cpp  input_util.h  string_util.cpp  string_util.h  zip_extractor.cpp  zip_extractor.h
src/main/cpp/utils/net/: downloader.cpp
src/main/java/org/hakizumi/cepheuna/: CepheunaApplication.java
src/main/java/org/hakizumi/cepheuna/config/: ApplicationConfig.java
src/main/java/org/hakizumi/cepheuna/controller/: ConversationController.java
src/main/java/org/hakizumi/cepheuna/dto/: ConversationRequest.java  ConversationResponse.java
src/main/java/org/hakizumi/cepheuna/service/: BaseLLMService.java  OpenaiLLMService.java
src/main/java/org/hakizumi/cepheuna/tools/: AgentTool.java  SystemTools.java
src/main/java/org/hakizumi/cepheuna/utils/: StringUtils.java
src/main/java/org/hakizumi/hakihive/: HakihiveApplication.java
src/main/java/org/hakizumi/hakihive/config/: ApplicationConfig.java  AudioProperties.java  ModelProperties.java  SherpaConfig.java  WebConfig.java
src/main/java/org/hakizumi/hakihive/controller/: ConversationController.java  PageController.java  ServerWebSocketHandler.java  SessionOutstreamService.java
src/main/java/org/hakizumi/hakihive/dto/: ConversationRequest.java  ConversationResponse.java  FrontendWsCommand.java  OutstreamResponse.java  UserAudioRequest.java
src/main/java/org/hakizumi/hakihive/memory/: Conversation.java  ConversationState.java  MemoryProvideOrchestrator.java
src/main/java/org/hakizumi/hakihive/service/: BaseLLMService.java  LLMService.java  OpenaiLLMService.java  OutstreamService.java  ServerService.java  (+1 more)
src/main/resources/: application.yml
src/main/resources/static/: index.html
src/main/resources/static/css/: chat.css
src/main/resources/static/source/: app.ts  chat.ts
src/main/resources/static/source/audio/: audio-capture-worklet.ts  audio-worklet.d.ts
src/main/resources/templates/: chat.html
(+20 files in other folders)
